--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <!--START Iframe-->
         <div id="donation" class="bg-[url(/images/Pattern.svg)] bg-[var(--color-lightGray)] bg-cover bg-center py-20 sm:py-24">
           <div class="flex flex-col items-center gap-4 mx-auto max-w-7xl px-6 lg:px-8">
-            <p class="text-sm/7 tracking-widest font-normal text-[var(--color-secondary)] uppercase">Donation/p>
+            <p class="text-sm/7 tracking-widest font-normal text-[var(--color-secondary)] uppercase">Donation</p>
             <h2 class="mb-12 max-w-lg text-center font-serif tracking-tight text-pretty text-[var(--color-primary)] text-4xl sm:text-4xl/12">Contribuez à l'Avenir d'IQRA</h2>
             <iframe  src="https://donorchoice.ca/embedded/ccmi/projetachatdelamosque" 
             width="100%" height="600px" style="border:none;" 
@@ -277,7 +277,7 @@
                   <p class="text-sm/7 tracking-widest font-normal text-[var(--color-secondary)] uppercase">centre Communautaire Musulman </p>
                   <h2 class="mt-4 font-serif tracking-tight text-pretty text-[var(--color-primary)] text-4xl sm:text-4xl/12">Autres moyens d'effectuer votre don</h2>
                   <p class="mt-4 text-base/7 w-4/5 text-[var(--color-textgray)]">Lorem ipsum dolor sit amet consectetur adipisicing elit.Impedit ex obcaecati natus eligendi delectus.</p>
-                  <dl class="flex align-top gap-8 mt-10 max-w-xl space-y-8 text-base/7 text-[var(--color-textgray)] lg:max-w-none">
+                  <dl class="flex align-top gap-4 mt-10 max-w-xl space-y-8 text-base/7 text-[var(--color-textgray)] lg:max-w-none">
                     <img src="\images\interac.svg" alt=""></img>
                     <div class="relative mt-0!">
                       <dt class="flexinline text-base font-semibold text-[var(--color-primary)]">
